feat(email-template): implemented email template for account activation

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -544,6 +544,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-radius: 0.375rem;
 }
 
+.border {
+  border-width: 1px;
+}
+
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
