style: 💄 added Image
added image the our target folder

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1020,6 +1020,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   content: var(--tw-content);
 }
 
+.hover\:border-transparent:hover {
+  border-color: transparent;
+}
+
 .hover\:bg-blue-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
